--- a/user.ini
+++ b/user.ini
@@ -49,7 +49,7 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
 ;ruleset=🎯 全球直连,[]GEOIP,LAN
 ruleset=🎯 全球直连,[]GEOSITE,CN
-ruleset=♻️ 自动选择,[]GEOSITE,geolocation-!cn
+;ruleset=♻️ 自动选择,[]GEOSITE,geolocation-!cn
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
