--- a/user.ini
+++ b/user.ini
@@ -13,7 +13,7 @@ ruleset=📺 哔哩哔哩,https://ghp.ci/https://raw.githubusercontent.com/ACL4S
 ruleset=📺 哔哩哔哩,https://ghp.ci/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bilibili.list
 ruleset=💬 OpenAi,https://ghp.ci/https://raw.githubusercontent.com/zimoadmin/rule/main/AI.list
 ruleset=👨🏿‍💻 GitHub,https://ghp.ci/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.list
-ruleset=👨🏿‍💻 GitHub,clash-classic:https://ghp.ci/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.yaml
+;ruleset=👨🏿‍💻 GitHub,clash-classic:https://ghp.ci/https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.yaml
 ruleset=🎯 全球直连,https://ghp.ci/https://raw.githubusercontent.com/zimoadmin/rule/main/Direct.list
 ruleset=🎯 全球直连,https://ghp.ci/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://ghp.ci/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
