--- a/user.ini
+++ b/user.ini
@@ -8,7 +8,7 @@
 ;增强国外GFW：支持
 
 ;设置规则标志位
-ruleset=♻️ 自动选择,https://ghp.ci/https://raw.githubusercontent.com/zimoadmin/rule/main/Automatic.list
+ruleset=🔯 故障转移,https://ghp.ci/https://raw.githubusercontent.com/zimoadmin/rule/main/Automatic.list
 ruleset=📺 哔哩哔哩,https://ghp.ci/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list
 ruleset=📺 哔哩哔哩,https://ghp.ci/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bilibili.list
 ruleset=💬 OpenAi,https://ghp.ci/https://raw.githubusercontent.com/zimoadmin/rule/main/AI.list
