--- a/user.ini
+++ b/user.ini
@@ -9,7 +9,7 @@
 
 ;设置规则标志位
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/zimoadmin/rule/refs/heads/main/domestic.list
-ruleset=🔯 故障转移,https://raw.githubusercontent.com/zimoadmin/rule/main/Automatic.list
+ruleset=🚀 节点选择,https://raw.githubusercontent.com/zimoadmin/rule/main/Automatic.list
 ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list
 ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bilibili.list
 ruleset=💬 OpenAi,https://raw.githubusercontent.com/zimoadmin/rule/main/AI.list
