--- a/user.ini
+++ b/user.ini
@@ -50,7 +50,7 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 ;ruleset=🎯 全球直连,[]GEOIP,LAN
 ruleset=🎯 全球直连,[]GEOSITE,CN
-ruleset=🔯 故障转移,[]GEOSITE,geolocation-!cn
+ruleset=🚀 节点选择,[]GEOSITE,geolocation-!cn
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
