--- a/user.ini
+++ b/user.ini
@@ -8,6 +8,7 @@
 ;增强国外GFW：支持
 
 ;设置规则标志位
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/KuaiShou/KuaiShou.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/zimoadmin/rule/refs/heads/main/domestic.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/zimoadmin/rule/main/Automatic.list
 ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list
