--- a/user.ini
+++ b/user.ini
@@ -51,7 +51,7 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 ;ruleset=🎯 全球直连,[]GEOIP,LAN
 ruleset=🎯 全球直连,[]DST-PORT,80
-ruleset=🎯 全球直连,[]DST-PORT,443
+;ruleset=🎯 全球直连,[]DST-PORT,443
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🎯 全球直连,[]GEOSITE,CN
 ruleset=🚀 节点选择,[]GEOSITE,geolocation-!cn
