--- a/user.ini
+++ b/user.ini
@@ -52,8 +52,8 @@ ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ;ruleset=🎯 全球直连,[]GEOIP,LAN
 ruleset=🎯 全球直连,[]DST-PORT,80
 ;ruleset=🎯 全球直连,[]DST-PORT,443
-ruleset=🎯 全球直连,[]GEOIP,CN
-ruleset=🎯 全球直连,[]GEOSITE,CN
+;ruleset=🎯 全球直连,[]GEOIP,CN
+;ruleset=🎯 全球直连,[]GEOSITE,CN
 ruleset=🚀 节点选择,[]GEOSITE,geolocation-!cn
 ruleset=🐟 漏网之鱼,[]FINAL
 
