--- a/user.ini
+++ b/user.ini
@@ -8,6 +8,7 @@
 ;增强国外GFW：支持
 ;设置规则标志位
 ;ruleset=🆎 AdBlock,https://raw.githubusercontent.com/ignaciocastro/a-dove-is-dumb/refs/heads/main/winhosts.txt
+ruleset=🌍 国外媒体,https://raw.githubusercontent.com/zimoadmin/rule/refs/heads/main/foreign%20media.list
 ruleset=👨🏿‍💻 GitHub,https://raw.githubusercontent.com/zimoadmin/rule/main/githubrule.list
 ;ruleset=👨🏿‍💻 GitHub,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.yaml
 ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list
