--- a/user.ini
+++ b/user.ini
@@ -13,7 +13,7 @@ ruleset=👨🏿‍💻 GitHub,https://raw.githubusercontent.com/zimoadmin/rule/
 ;ruleset=👨🏿‍💻 GitHub,clash-classic:https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.yaml
 ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list
 ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bilibili.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/zimoadmin/rule/refs/heads/main/domestic.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/zimoadmin/rule/main/domestic.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/KuaiShou/KuaiShou.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/zimoadmin/rule/main/Automatic.list
 ruleset=💬 OpenAi,https://raw.githubusercontent.com/zimoadmin/rule/main/AI.list
@@ -53,8 +53,8 @@ ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ;ruleset=🎯 全球直连,[]GEOIP,LAN
 ;ruleset=🎯 全球直连,[]DST-PORT,80
 ;ruleset=🎯 全球直连,[]DST-PORT,443
-;ruleset=🎯 全球直连,[]GEOIP,CN
-;ruleset=🎯 全球直连,[]GEOSITE,CN
+ruleset=🎯 全球直连,[]GEOIP,CN
+ruleset=🎯 全球直连,[]GEOSITE,CN
 ruleset=🚀 节点选择,[]GEOSITE,geolocation-!cn
 ruleset=🐟 漏网之鱼,[]FINAL
 
